--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@
     --gradient: linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
     --font: 'Titillium Web', sans-serif;
 }
+
 *{
     margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
 }
-
 body{
     font-family: var( --font );
     font-size: 16px;
@@ -65,7 +65,56 @@ img{
 #menu-bars{
     display: none;
 }
-
+.banner{
+    width: 100%;
+    position: relative;
+}
+.banner-position{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+.banner-content{
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: flex-end;
+}
+.banner-text{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+.banner-text h1{
+    font-size: 5.62em;
+}
+.banner-text p{
+    font-size: 1.87em;
+}
+.banner-text a{
+    font-size: 1.87em;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+    background-color: var(--red);
+    padding: 0.5em 1em;
+    border-radius: 0.5em;
+    margin-top: 1em;
+}
+.jogos{
+    width: 100%;
+    height: 7.5em;
+}
+.jogos ul{
+    list-style-type: none;
+    width: 100%;
+}
 @media screen and (max-width: 74.93em){
 
 }
