--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 :root{
 
     --background: #000000;
@@ -71,8 +71,7 @@ img{
 }
 .banner-position{
     width: 100%;
-    height: 100%;
-    position: absolute;
+    height: 100%;    position: absolute;
     top: 0;
 }
 .banner-content{
@@ -110,6 +109,7 @@ img{
 .jogos{
     width: 100%;
     height: 7.5em;
+    color: white;
 }
 .jogos ul{
     list-style-type: none;
@@ -162,6 +162,39 @@ img{
 }
 .about-position img{
     max-width: 31.87em;
+}
+.jogos-aovivo, .jogos-embreve{
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 1.875em;
+}
+.jogos-aovivo::after{
+    content:'';
+    height: 2.666em;
+    border-right: solid 1px #fff;
+    margin: 0 1em;
+}
+.partida{
+    width: 9.5em;
+    margin-left: 1em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.partida img{
+    max-width: 1.8em;
+}
+.time1, .time2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 400;
+}
+.time1{
+    margin-left: 0.5em;
+}
+.time2{
+    margin-right: 0.5em;
 }
 
 @media screen and (max-width: 74.93em){
