--- a/css/style.css
+++ b/css/style.css
@@ -301,34 +301,69 @@ img{
     justify-content: space-around;
     margin: 1em;
 }
+.logo-rodape{
+    max-width: 18.75em;
+}
 .rodape img{
     width: 100%;
     max-width: 15em;
     height: 2em;
 }
-.links-uteis{
-    width: 100%;
-    max-width: 400px;
+.links-footer{
+    width: 20%;
     display: flex;
     justify-content: space-between;
 }
-.links{
-    color: white;
-    font-family: 'Roboto', sans-serif;
-}
-.email{
+.links h2{
+    font-size: 1.5em;
     color: white;
 }
-.email li{
+.links ul{
     color: white;
-    list-style: none;
+    margin-top: 0.5em;
 }
-.cadastro{
+.links li{
+    margin-left: 2em;
+}
+.links a{
+    text-decoration: none;
+    color: white;
+}
+.socias{
+    width: 33%;
+}
+.newslatter h2 {
+    font-size: 0.875em;
+    color: white;
+    margin-bottom: 0.5em;
+}
+.newslatter form{
     display: flex;
 }
-
+.newslatter input[type="email"]{
+    width: 12.5em;
+    height: 2.5em;
+    font-size: 1.1em;
+    padding-left: 1em;
+}
+.newslatter input[type="email"]::placeholder{
+    color: rgb(102, 102, 102);
+    font-weight: bold;
+}
+.newslatter input[type="submit"]{
+    width: 9.75em;
+    height: 2.5em;
+    font-size: 1.1em;
+    background-color: #8326ef;
+}
+.siga-nos{
+    margin-top: 1em;
+}
+.siga-nos h2{
+    color: white;
+}
 @media screen and (max-width: 74.93em){
-
+    
 }
 
 @media screen and (max-width: 47.93em){
