--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ img{
     height: 5em;
 }
 .content{
-    width: 80%;
+    width: 85%;
     height: 100%;
     max-width: 75em;
     margin: auto;
@@ -40,7 +40,7 @@ img{
 }
 .topo img{
     max-width: 21.18em;
-
+    width: 95%;
 }
 .menu{
     width: 100%;
@@ -71,7 +71,8 @@ img{
 }
 .banner-position{
     width: 100%;
-    height: 100%;    position: absolute;
+    height: 100%;    
+    position: absolute;
     top: 0;
 }
 .banner-content{
@@ -91,10 +92,10 @@ img{
     color: #fff;
 }
 .banner-text h1{
-    font-size: 5.62em;
+    font-size: 4em;
 }
 .banner-text p{
-    font-size: 1.87em;
+    font-size: 1.5em;
 }
 .banner-text a{
     font-size: 1.87em;
@@ -110,6 +111,7 @@ img{
     width: 100%;
     height: 7.5em;
     color: white;
+    
 }
 .jogos ul{
     list-style-type: none;
@@ -210,18 +212,18 @@ img{
     max-width: 78.125em;
     height: 57.5em;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin: auto;
 
 }
 .cards-center{
     width: 100%;
-    max-width: 56.25em;
+    max-width: 50em;
     height: 50em;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     
     
@@ -255,8 +257,8 @@ img{
     max-width: 13em;
 }
 .aside{
-    width:100%;
-    max-width: 16em;
+    width:90%;
+    max-width: 15em;
     height: 46.875em;
     background-color: #000;
     background: linear-gradient(180deg, rgba(83, 83, 83, 0.5) 0%, #000000 100%);
@@ -302,17 +304,17 @@ img{
     margin: 1em;
 }
 .logo-rodape{
-    max-width: 18.75em;
+    max-width: 20em;
 }
 .rodape img{
     width: 100%;
-    max-width: 15em;
+    max-width: 20em;
     height: 2em;
 }
 .links-footer{
-    width: 20%;
+    width: 33%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .links h2{
     font-size: 1.5em;
@@ -333,7 +335,7 @@ img{
     width: 33%;
 }
 .newslatter h2 {
-    font-size: 0.875em;
+    font-size: 1em;
     color: white;
     margin-bottom: 0.5em;
 }
@@ -363,10 +365,185 @@ img{
     color: white;
 }
 @media screen and (max-width: 74.93em){
+    .content{
+        width: 85%;
+        justify-content: space-around;
+    }
+    .about-text h2{
+        font-size: 2em;
+    }
+    .about-text p{
+        font-size: 1em;
+    }
+    .topo img{
+        width: 100%;
+        max-width: 15em;
+        padding-right: 1em;
+        margin-top: 0.4em;
+    }
+    .menu a{
+        font-size: 1.3em;
+    }
+    .jogos ul{
+        width: 90%;
+    }
+    .jogos-aovivo, .jogos-embreve{
+        font-size: 1.3em;
+    }
+    .partida img{
+        max-width: 3em;
+        width: 100%;
+    }
+    .notice{
+        max-width: 12.5em;
+    }
+    .aside{
+        width: 100%;
+        max-width: 13em;
+    }
+    .next h4{
+        font-size: 1.3em;
+    }
+    .cards-center{
+        max-width: 43em;
+    }
+    .cards-position{
+        width: 93%;
+    }
+    .links h2{
+        font-size: 1.3em;
+    }
+    .links a{
+        font-size: 1em;
+    }
+    .rodape img{
+        max-width: 15em;
+    }
+    .newslatter input[type="email"] { 
+        width: 9em;
+    }
+    .newslatter input[type="submit"] {
+        width: 7em;
+    }
+    .newslatter h2{
+        font-size: 0.75em;
+    }
     
 }
 
+@media screen and (max-width: 64em){
+    .content{
+        width: 95%;
+    }
+    .menu a{
+        font-size: 1em;
+    }
+    .banner-text h1{
+        font-size: 3em;
+    }
+    .banner-text p{
+        font-size: 1.1em;
+    }
+    .banner-text a{
+        font-size: 1.45em;
+    }
+    .banner img{
+        width: 100%;
+        max-width: 64em;
+    }
+    .about-position img{
+        width: 21em;
+    }
+    .about-text p{
+        font-size: 0.9em;
+    }
+    .about-text h2{
+        font-size: 1.7em;
+    }
+    .jogos img{
+        max-width: 7em;
+    }
+    .jogos-aovivo, .jogos-embreve{
+        font-size: 1em;
+    }
+    .partida{
+        width: 10em;
+    }
+    .partida img{
+        max-width: 3em;
+        width: 100%;
+    }
+    .cards{
+        height: 65em;
+    }
+    .cards-center{
+        max-width: 49em;
+        margin: auto;
+    }
+    .cards-position{
+        display: block;
+    }
+
+    .aside{
+        display: flex;
+        height: 10em;
+        width: 100%;
+        max-width: 60em;
+    }
+    .none-2{
+        display: none;
+    }
+    .aside h4{
+        font-size: 1.1em;
+    }
+    .aside img{
+        width: 3em;
+    }
+    .aside p{
+        font-size: 1em;
+    }
+    .rodape img{
+        max-width: 10em;
+    }
+    .newslatter input[type="email"] { 
+        width: 6em;
+    }
+    .newslatter input[type="submit"] {
+        width: 5em;
+    }
+    .newslatter h2{
+        font-size: 0.5em;
+    }
+    .siga-nos h2{
+        font-size: 1em;
+    }
+    .siga-nos img{
+        max-width: 7em;
+    }
+    .links a {
+        font-size: 0.8em;
+    }
+
+
+}
+
 @media screen and (max-width: 47.93em){
+    .cards-position{
+        display: block;
+    }
+
+    .aside{
+        display: flex;
+        height: 10em;
+        width: 100%;
+        max-width: 47em;
+    }
+    .none{
+        display: none;
+    }
+    .none-2{
+        display: block;
+    }
 
 }
 
